--- a/package.json
+++ b/package.json
@@ -13,18 +13,16 @@
     "test:db:prepare": "dotenv -f .env.test -- npx prisma migrate reset --force --skip-seed",
     "test": "dotenv -f .env.test -- npx prisma migrate deploy && jest -i",
     "prisma:generate_client": "prisma generate",
-    "db:migrate": "prisma migrate deploy",
-    "db:seed": "node prisma/seed.js"
+    "db:migrate": "prisma migrate deploy"
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.11",
     "@next/bundle-analyzer": "13.3.1",
-    "@prisma/client": "^4.1.0",
+    "@prisma/client": "^4.13.0",
     "@sentry/nextjs": "^7.2.0",
     "@tronweb3/tronwallet-adapter-react-hooks": "^1.1.2",
     "@tronweb3/tronwallet-adapter-react-ui": "^1.1.3",
     "@tronweb3/tronwallet-adapters": "^1.1.4",
-    "@types/node": "18.16.0",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.0",
     "cross-env": "^7.0.3",
@@ -37,13 +35,13 @@
     "semantic-ui-react": "^2.1.4",
     "swr": "^1.3.0",
     "tronweb": "^5.1.0",
-    "typescript": "5.0.4",
     "uuid": "^8.3.2",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "13.3.1",
     "@types/jest": "^29.5.1",
+    "@types/node": "^18.16.3",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "eslint": "^8.38.0",
@@ -62,6 +60,11 @@
     "jest-extended": "^3.2.4",
     "node-mocks-http": "^1.11.0",
     "prettier": "^2.8.4",
-    "prisma": "^4.1.0"
+    "prisma": "^4.13.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
 }
