--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@next/eslint-plugin-next": "13.3.1",
     "@types/jest": "^29.5.1",
     "@types/node": "^18.16.3",
+    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "eslint": "^8.39.0",
