--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,42 @@
+# -----------------------------------------------------------------------------
+# Database (PostgreSQL)
+# -----------------------------------------------------------------------------
+
 POSTGRES_USER=app
 POSTGRES_DB=app
 POSTGRES_PASSWORD=password
 DATABASE_URL=postgresql://app:password@127.0.0.1:5432/app?sslmode=disable
 
+# -----------------------------------------------------------------------------
+# Authentication (NextAuth.js)
+# -----------------------------------------------------------------------------
+
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET= # Linux, macOS: `openssl rand -hex 32` or go to https://generate-secret.now.sh/32
+
+# EMAIL_SERVER_USER=username
+# EMAIL_SERVER_PASSWORD=password
+# EMAIL_SERVER_HOST=smtp.example.com
+# EMAIL_SERVER_PORT=587
+# EMAIL_FROM=noreply@example.com
+
+# GITHUB_CLIENT_ID=
+# GITHUB_CLIENT_SECRET=
+
+# GOOGLE_CLIENT_ID=
+# GOOGLE_CLIENT_SECRET=
+
+# -----------------------------------------------------------------------------
+# Blockchain
+# -----------------------------------------------------------------------------
+
 TRON_NETWORK=shasta
 TOKEN_ADDRESS=TKTnW2uscRtH1AYiraSe4EueV9dtzcRQKJ
 TOKEN_DECIMALS=6
 TOKEN_SYMBOL=MYTOKENNAME
+
+# -----------------------------------------------------------------------------
+# Bug Tracking (Sentry)
+# -----------------------------------------------------------------------------
 
 # SENTRY_DSN=https://qwerty.ingest.sentry.io/42
