--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.0",
+    "@next-auth/prisma-adapter": "^1.0.6",
     "@next/bundle-analyzer": "13.3.4",
-    "@prisma/client": "^4.13.0",
+    "@prisma/client": "^4.14.1",
     "@sentry/nextjs": "^7.50.0",
     "@tronweb3/tronwallet-adapter-react-hooks": "^1.1.2",
     "@tronweb3/tronwallet-adapter-react-ui": "^1.1.3",
@@ -28,6 +29,8 @@
     "cross-env": "^7.0.3",
     "mobile-detect": "^1.4.5",
     "next": "13.4.2",
+    "next-auth": "^4.22.1",
+    "nodemailer": "^6.9.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.5",
@@ -60,7 +63,7 @@
     "jest-extended": "^3.2.4",
     "node-mocks-http": "^1.11.0",
     "prettier": "^2.8.4",
-    "prisma": "^4.13.0",
+    "prisma": "^4.14.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   },
