Add sign-in via LinkedIn

--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,9 @@ NEXTAUTH_SECRET= # Linux, macOS: `openssl rand -hex 32` or go to https://generat
 # GOOGLE_CLIENT_ID=
 # GOOGLE_CLIENT_SECRET=
 
+# LINKEDIN_CLIENT_ID=
+# LINKEDIN_CLIENT_SECRET=
+
 # -----------------------------------------------------------------------------
 # Blockchain
 # -----------------------------------------------------------------------------
