Add Google Analytics

--- a/.env.example
+++ b/.env.example
@@ -39,6 +39,12 @@ TOKEN_DECIMALS=6
 TOKEN_SYMBOL=MYTOKENNAME
 
 # -----------------------------------------------------------------------------
+# Analytics (GA)
+# -----------------------------------------------------------------------------
+
+# NEXT_PUBLIC_GA_ID=G-0123456789
+
+# -----------------------------------------------------------------------------
 # Bug Tracking (Sentry)
 # -----------------------------------------------------------------------------
 
