Add batch contract address var to .env.example

--- a/.env.example
+++ b/.env.example
@@ -37,6 +37,7 @@ TRON_NETWORK=shasta
 TOKEN_ADDRESS=TKTnW2uscRtH1AYiraSe4EueV9dtzcRQKJ
 TOKEN_DECIMALS=6
 TOKEN_SYMBOL=MYTOKENNAME
+BATCH_CONTRACT_ADDRESS=TT9YVDZiLcBc4KmJCF3FG8xV6oLwq8zko6
 
 # -----------------------------------------------------------------------------
 # Analytics (GA)
