Add LinkedIn Analytics

--- a/.env.example
+++ b/.env.example
@@ -39,10 +39,12 @@ TOKEN_DECIMALS=6
 TOKEN_SYMBOL=MYTOKENNAME
 
 # -----------------------------------------------------------------------------
-# Analytics (GA)
+# Analytics (GA, LinkedIn)
 # -----------------------------------------------------------------------------
 
 # NEXT_PUBLIC_GA_ID=G-0123456789
+
+# NEXT_PUBLIC_LINKEDIN_TRACKING_PARTNER_ID=1234578
 
 # -----------------------------------------------------------------------------
 # Bug Tracking (Sentry)
