--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
         - TOKEN_ADDRESS=${TOKEN_ADDRESS}
         - TOKEN_DECIMALS=${TOKEN_DECIMALS}
         - TOKEN_SYMBOL=${TOKEN_SYMBOL}
+        - GOOGLE_ANALYTICS_ID=${GOOGLE_ANALYTICS_ID}
+        - LINKEDIN_TRACKING_PARTNER_ID=${LINKEDIN_TRACKING_PARTNER_ID}
     env_file: .env
     depends_on:
       db:
