Add BATCH_CONTRACT_ADDRESS to Docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
         - TOKEN_ADDRESS=${TOKEN_ADDRESS}
         - TOKEN_DECIMALS=${TOKEN_DECIMALS}
         - TOKEN_SYMBOL=${TOKEN_SYMBOL}
+        - BATCH_CONTRACT_ADDRESS=${BATCH_CONTRACT_ADDRESS}
         - NEXT_PUBLIC_GOOGLE_ANALYTICS_ID=${NEXT_PUBLIC_GOOGLE_ANALYTICS_ID}
         - NEXT_PUBLIC_LINKEDIN_TRACKING_PARTNER_ID=${NEXT_PUBLIC_LINKEDIN_TRACKING_PARTNER_ID}
     env_file: .env
