--- a/.env.example
+++ b/.env.example
@@ -39,6 +39,8 @@ TOKEN_DECIMALS=6
 TOKEN_SYMBOL=MYTOKENNAME
 BATCH_CONTRACT_ADDRESS=TT9YVDZiLcBc4KmJCF3FG8xV6oLwq8zko6
 
+WALLET_CONNECT_PROJECT_ID=
+
 # -----------------------------------------------------------------------------
 # Analytics (GA, LinkedIn)
 # -----------------------------------------------------------------------------
