--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
         - TOKEN_DECIMALS=${TOKEN_DECIMALS}
         - TOKEN_SYMBOL=${TOKEN_SYMBOL}
         - BATCH_CONTRACT_ADDRESS=${BATCH_CONTRACT_ADDRESS}
+        - WALLET_CONNECT_PROJECT_ID=${WALLET_CONNECT_PROJECT_ID}
         - NEXT_PUBLIC_GOOGLE_ANALYTICS_ID=${NEXT_PUBLIC_GOOGLE_ANALYTICS_ID}
         - NEXT_PUBLIC_LINKEDIN_TRACKING_PARTNER_ID=${NEXT_PUBLIC_LINKEDIN_TRACKING_PARTNER_ID}
     env_file: .env
