--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next": "13.4.2",
     "next-auth": "^4.22.1",
     "nodemailer": "^6.9.2",
+    "papaparse": "^5.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.5",
@@ -44,6 +45,7 @@
     "@next/eslint-plugin-next": "13.3.1",
     "@types/jest": "^29.5.1",
     "@types/node": "^18.16.3",
+    "@types/papaparse": "^5.3.7",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.8",
