--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.4",
     "cross-env": "^7.0.3",
+    "json2csv": "^6.0.0-alpha.2",
     "mobile-detect": "^1.4.5",
     "multer": "^1.4.5-lts.1",
     "next": "13.4.2",
@@ -47,6 +48,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.1",
+    "@types/json2csv": "^5.0.3",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.16.3",
     "@types/papaparse": "^5.3.7",
